--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -17,4 +17,63 @@
         padding: 35px 45px;
         background-color: $main-color;
     }
+    &__place {
+        font-family: 'El Messiri';
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 140%;
+        color: #FFFFFF;
+    }
+    &__adress {
+        position: relative;
+        margin-top: 20px;
+        padding-left: 40px;
+        font-family: 'Proxima Nova';
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 135%;
+        list-style-type: none;
+        color: #FFFFFF;
+        li {
+            margin-bottom: 21px;
+            &:nth-child(1) {
+                &::before {
+                    content: url("../icons/location.svg");
+                }
+            }
+            &:nth-child(2) {
+                &::before {
+                    content: url("../icons/metro.svg");
+                }
+            }
+            &:nth-child(3) {
+                &::before {
+                    content: url("../icons/calendar.svg");
+                }
+            }
+            &::before {
+                position: absolute;
+                left: -40px;
+            }
+        }
+    }
+    &__btn {
+        margin-top: 10px;
+        width: 155px;
+        height: 36px;
+        background: #FFFFFF;
+        border-radius: 3px;
+        border: 0;
+        font-family: 'Proxima Nova';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 13px;
+        line-height: 140%;
+        color: #018ABE;
+        cursor: pointer;
+        transition: all;
+        &:hover {
+            border: 2px solid rgb(53, 52, 52);
+        }
+    }
 }
