--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -17,6 +17,7 @@ body {
     margin: 0px auto;
 }
 
+// main
 @import "blocks/title";
 @import "blocks/header";
 @import "blocks/promo";
@@ -25,5 +26,10 @@ body {
 @import "blocks/about";
 @import "blocks/prices";
 @import "blocks/contacts";
+@import "blocks/footer";
+
+//news
+@import "blocks/news";
+
 
 @import "base/media";
