--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -2,7 +2,7 @@
     margin-top: 50px;
     .container {
         height: 600px;
-        background: url('../../img/promo_bg.png') center (center/cover) no-repeat;
+        background: url('../img/promo_bg.png') center (center/cover) no-repeat;
     }
     &__subtitle {
         padding-top: 136px;
