--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -7,7 +7,7 @@
         font-size: 14px;
         line-height: 135%;
         color: #FFFFFF;
-        &_news {
+        &_news, &_format {
             margin-top: 30px;
         }
     }
@@ -21,4 +21,8 @@
     &_news {
         margin-top: 120px;
     }
+    &_format {
+        margin-top: 160px;
+    }
+
 }
